option java_package = "proto";
option java_outer_classname = "CalculatorMsg";
option  java_generic_services = true;
option java_generate_equals_and_hash = true;

message RequestProto {
    required int32 num1 = 1;
    required int32 num2 = 2;
}

message ResponseProto {
    required int32 result = 1;
}